fix: list item whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ ul {
 
 ul li {
     margin: 0;
-    padding: 0;
+    padding: 0 0 10px 0;
     list-style-image: url(imgs/ic_star_rate_black_14px.svg);
 }
 
